--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luke Hunker</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Luke Hunker</title>
-    </head>
-    <body>
 
-        <h1><center>Luke Hunker<center></h1>
+<body>
+<header>
+<div class="navbar_container">
+    <img src="logo.png" alt="logo" class = "logo" height = 50 width = 50>
+  <nav class="navbar">
+    <a1 href= "/">Luke Hunker</a1>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/projects.html">Projects</a> </li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+    </ul>
+  </nav> 
+</div>
+</header>
+</body>
 
-        This website is <b>password protected</b>
-        <hr>
-        <a href="https://onq.queensu.ca/d2l/home">Onq Page</a>
-        <br>
-        <br>
-        <label for="pwd">Password:</label>
-        <input type="password" id="pwd" name="pwd">
-        <input type="submit" value="Submit">
 
-        </form>
-    </body>
+
 </html>
 
 
