--- a/index.html
+++ b/index.html
@@ -18,12 +18,26 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/projects.html">Projects</a> </li>
-        <li><a href="/about.html">About</a></li>
         <li><a href="/contact.html">Contact</a></li>
     </ul>
   </nav> 
 </div>
 </header>
+
+<div class = "main">
+  <div class = "main_container">
+    <div class = "main_content">
+      <h1>Luke Hunker</h1>
+      <h2>Computer Engineer - Queen's University</h2>
+    </div>
+  </div>
+  <div class = "about_container">
+    <div class = "about_content">
+      <h1>About me</h1>
+      <p>I am a third-year computer engineering student specializing in ... </p>
+    </div>
+  </div>
+</div>
 </body>
 
 
