--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Contact</title>
 </head>
 <body>
-    Here is how to contact me
+    <header>
+    <div class="navbar_container">
+        <img src="logo.png" alt="logo" class="logo" height=50 width=50>
+        <nav class="navbar">
+            <a1 href="/">Luke Hunker</a1>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/projects.html">Projects</a> </li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+    </header>
+
+    <div class = "contactinfo_container">
+        <div class = "contactinfo_content">
+            <h1>Contact Information</h1>
+            <p>If you wish to get in contact with me, don't hesitate!</p>
+            <img src="phone.png" alt="phone" class = "phone" height = 40 width = 40>
+            <p1>613-203-2016</p1>
+        </div>
+    </div>
+
+    <div class = "contactme_container">
+        <div class = "row">
+            <div class = "column">
+                <form action="action_page.php">
+                    <label for="fname">Full Name</label>
+                    <input type="text" id = "fname" name = "fullname" placeholder="Name...">
+                    <label for="emailaddr">Email Address</label>
+                    <input type="text" id="emailaddr" name="emailaddress" placeholder="Email Address...">
+                    <label for="phonenum">Phone Number</label>
+                    <input type="text" id="phonenum" name="phonenumber" placeholder="Phone Number...">
+                    <label for="subject">Subject</label>
+                    <input type="text" id="subject" name="subject" placeholder="Subject...">
+                    <label for="extrainfo">Extra Information</label>
+                    <textarea id="extrainfo" name="extrainformation" placeholder = "Anything else..." style="height:170px"></textarea>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
