--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Projects</title>
 </head>
+
+
+
 <body>
-    Welcome to the Projects tab
+<header>
+<div class="navbar_container">
+    <img src="logo.png" alt="logo" class="logo" height=50 width=50>
+    <nav class="navbar">
+        <a1 href="/">Luke Hunker</a1>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/projects.html">Projects</a> </li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</div>
+</header>
 </body>
 </html>
