--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <a1 href= "/">Luke Hunker</a1>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/projects.html">Projects</a> </li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="projects.html">Projects</a> </li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav> 
 </div>
