--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <a1 href="/">Luke Hunker</a1>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="index.html" class = "button">Home</a></li>
                 <li><a href="projects.html" class = "button">Projects</a> </li>
                 <li><a href="contact.html" class = "button">Contact</a></li>
             </ul>
